<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="75dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title"
            android:id="@+id/button"
            android:background="@color/green"
            android:onClick="roommateClick"/>
    </LinearLayout>

    <android.widget.Space
        android:layout_width="0dp"
        android:layout_height="10dp"/>

    <LinearLayout
        android:id="@+id/layout_row1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:orientation="horizontal" >

        <Button
            android:id="@+id/supply"
            style="?android:attr/buttonStyleSmall"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/supply"
            android:background="@color/blue"
            android:onClick="supplyClick" />

        <android.widget.Space
            android:layout_width="10dp"
            android:layout_height="0dp"/>

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/calendar"
            android:background="@color/pumpkin"
            android:onClick="eventClick"/>


    </LinearLayout>

    <android.widget.Space
        android:layout_width="0dp"
        android:layout_height="10dp"/>

    <LinearLayout
        android:id="@+id/layout_row2"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:orientation="horizontal" >

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_height="fill_parent"
            android:layout_width="2dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/expenses"
            android:background="@color/orange"
            android:onClick="expenseClick"/>

        <android.widget.Space
            android:layout_width="10dp"
            android:layout_height="0dp"/>

        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonStyleSmall"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/tasks"
            android:background="@color/pink"
            android:onClick="taskClick"/>


    </LinearLayout>


</LinearLayout>